2005-11-25  David Kastrup  <dak@gnu.org>

	* longlines.el (longlines-wrap-line): Reorder wrapping to "insert
	new character, then delete" in order to preserve markers.

2005-11-25  David Ponce  <david@dponce.com>

	* recentf.el (recentf-arrange-by-rule): Handle a special
	`auto-mode-alist'-like "strip suffix" rule.
	(recentf-build-mode-rules): Handle second level auto-mode entries.

2005-11-25  Michael Kifer  <kifer@cs.stonybrook.edu>
	
	* viper-keym.el (viper-ESC-key): Use different values in terminal and
	window modes.
	
	* viper.el (viper-emacs-state-mode-list): Delete mail-mode, add
	jde-javadoc-checker-report-mode.
	
	* ediff-wind (ediff-make-wide-display): Slight simplification.
	
	* ediff.el (ediff-date): Changed the date of last update.
	
2005-11-24  Chong Yidong  <cyd@stupidchicken.com>

	* hi-lock.el (hi-lock-buffer-mode): Renamed from `hi-lock-mode'.
	Use define-minor-mode, and make it a local mode.  Turn on
	font-lock.
	(hi-lock-mode): New global minor mode.
	(turn-on-hi-lock-if-enabled): New function.
	(hi-lock-line-face-buffer, hi-lock-face-buffer)
	(hi-lock-set-pattern): Changed arguments to regexp and face
	instead of a font-lock pattern.  Directly set face property,
	instead of refontifying.
	(hi-lock-font-lock-hook): Check if font-lock is being turned on.
	(hi-lock-find-patterns): Use line-number-at-pos.

	(hi-lock-face-phrase-buffer): Call hi-lock-buffer-mode.  Use new
	arguments for hi-lock-set-pattern.
	(hi-lock-unface-buffer, hi-lock-set-file-patterns): Call
	font-lock-fontify-buffer.
	(hi-lock-find-file-hook, hi-lock-current-line)
	(hi-lock-refontify, hi-lock-set-patterns): Deleted unused
	functions.

	(hi-lock-font-lock-hook): Turn off hi-lock when font lock is
	turned off.

	* progmodes/compile.el (compilation-setup): Don't fiddle with
	font-lock-defaults.

2005-11-25  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-var-create-handler)
	(gdb-var-list-children-handler): Find values for all variable